@@ -1,3 +1,9 @@
+October 27, 2009 Wei Mingzhi <weimingzhi@gmail.com>
+
+ * plugins/dfinput/xkb.c: Use XkbSetDetectableAutoRepeat() instead of
+   disabling autorepeat globally.
+ * po/zh_CN.po: Updated.
+
 October 26, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
  * plugins/dfinput/cfg.c: Fixed a bug which caused the settings for analog
